# Local-Collision-Differential-Attack-on-Reduced-SHA-256-upto-24-Rounds

./: .gitignore  .travis.yml  22-attack  22_round_attack_sha_256.c  24-attack  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Deterministic 22 Round Differential Attack on SHA-256/: 22_round_attack_sha_256.c
Differential Characteristics of Small Sigma 1/: main.cpp
Probabilistic 24 Round Differential Attack on SHA-256/: 24_round_attack_sha_256.c
SHA-256/: one_blc_msg_sha_256.c  one_blc_msg_with_pad_sha_256.c  sha-256.c
SHA-256/proper-implementation/: SHA256.c  SHA256.cpp
SHA-384/: SHA_384.cpp
SHA-512/: SHA_512.cpp  hashed_password_generator.cpp
